# MLOps_RecruitAIr_Deployment

./: README.md  app.py  cdk.json  eks.config.yaml  kind.config.yaml  pyproject.toml
.github/workflows/: deploy.yaml
cdk/: stack.py
deployment/: values.yaml
deployment/templates/: _helpers.tpl
deployment/templates/database/: database.yaml  pvc.yaml  service.yaml
deployment/templates/dispatcher/: db-migration-job.yaml  evaluator-deployment.yaml  extractor-deployment.yaml  init-db-job.yaml
deployment/templates/dispatcher/api/: deployment.yaml  hpa.yaml  ingress.yaml
recruitair/: Chart.yaml  values.yaml
recruitair/config/grafana/dashboards/: recruitair-evaluator-api.json
recruitair/config/prometheus/: prometheus.yml
recruitair/templates/dispatcher/: _helpers.tpl  dispatcher-db-secret.yaml  evaluator-deployment.yaml  evaluator-metrics-service.yaml  extractor-deployment.yaml  extractor-metrics-service.yaml  init-db-job.yaml
recruitair/templates/dispatcher/api/: deployment.yaml  ingress.yaml  service.yaml
recruitair/templates/evaluator/: deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
recruitair/templates/frontend/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
recruitair/templates/grafana/: dashboards-configmap.yaml  deployment.yaml  ingress.yaml  provisioning-configmap.yaml  provisioning-dashboards-configmap.yaml  provisioning-datasources-configmap.yaml  pvc.yaml  service.yaml
recruitair/templates/prometheus/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
(+11 files in other folders)
